move appropriate files into html_basic directory

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
         <h1>Bill Qubeka</h1>
         <p>I am a junior Software Engineer who enjoys desiging user-friendly webistes and applications</p>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <main>
         <section id="introduction">
             <h2>Introduction</h2>
@@ -40,7 +40,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p><a href="malito: billqubeka@gmail.com">Click to Send Mail</a></p>
+            <p><a href="malito:billqubeka@gmail.com">Email</a></p>
             <p><a href="https://www.linkedin.com/in/bill-qubeka/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a></p>
             <p><a href="https://github.com/billandro" target="_blank">Github Profile</a></p>
         </section>
