Some more styling

--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Tweets</title>
-    <style>
-        ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-        }
-
-        /*a {
-            text-decoration: none;
-            color: black;
-        }*/
-    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
+                <li class="logo"><a href="">&#123214;</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
@@ -38,7 +29,7 @@
         </aside>
     </main>
     <footer>
-        Made by <a href="ANY LINK" target="_blank">Bill Qubeka</a>
+        Made by <a href="https://github.com/billandro" target="_blank">Bill Qubeka</a>
     </footer>
 </body>
 </html>
