--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS_Basic</title>
-    <link rel="stylesheet" href="./base.css">
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Tweets</a></li>
+                <li class="logo"><a href="">&#123214;</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
             </ul>
         </nav>
     </header>
@@ -28,8 +29,6 @@
             <p>This is the second paragraph</p>
             <h3>Three</h3>
             <p>This is the third paragraph</p>
-
-            <p>The link to the <a href="tweets.html">tweets page</a></p>
         
             <div>
                 <table>
@@ -64,6 +63,7 @@
                     </tbody>
                 </table>
             </div>
+            <p class="the_link">Go to the <a href="tweets.html">tweets page</a></p>
         </article>
 
         <aside>
@@ -71,7 +71,7 @@
         </aside>
     </main>
     <footer>
-        Made by <a href="ANY LINK" target="_blank">Bill Qubeka</a>
+        Made by <a href="https://github.com/billandro" target="_blank">Bill Qubeka</a>
     </footer>
 </body>
 </html>
